# esp32-pet-tracker

./: .gitignore  .gitmodules  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  BOM.md  CHANGELOG.md  Cargo.toml  DEPENDENCIES.md  DESIGN.md  LICENSE  LICENSE-DESIGNS  PROGRESS.md  README.md  THIRD_PARTY.md  build.rs  eim_config.toml  esp32-export.sh  opencode.json  rust-toolchain.toml  sdk.defaults  setup.sh
.agents/guides/: build.md  documentation.md  testing.md
.agents/rules/: github.md  workflow.md
.cargo/: config.toml
.clangd/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  opencode-comment.yml  opencode.yml  pr_agent.yml  pr_reviewer.yml  todo.yml
.opencode/: opencode.json  session-ses_2d45.md
base_station/: LICENSE  app.py  config.py  database.py  mqtt_client.py  packet_parser.py  pyproject.toml  test_packet_parser.py
base_station/static/css/: style.css
base_station/static/js/: app.js
base_station/templates/: index.html
docs/: PROTOCOL.md  REORG.md
docs/datasheets/: XIAO ESP32S3 & Wio-SX1262 Kit Introduction  Seeed Studio Wiki.md
docs/firmware/: DEPENDENCIES.md  STATE_MACHINE.md
docs/hardware/: BOM.md  DESIGN.md  PINOUT.md  PLAN.md  TARGETS.md
docs/plans/: 2026-03-24-esp32-cpp-refactoring-plan.md
firmware/: CMakeLists.txt  build.sh  eim_config.toml  sdkconfig  sdkconfig.defaults  sdkconfig.old
firmware/components/test/: CMakeLists.txt
firmware/main/: CMakeLists.txt  accelerometer.cpp  accelerometer.hpp  battery.cpp  battery.hpp  ble.cpp  ble.hpp  board_config.h  button_handler.cpp  button_handler.hpp  config.cpp  config.hpp  deep_sleep.hpp  geofence.cpp  geofence.hpp  gpio_driver.cpp  gpio_driver.hpp  gps.cpp  gps.hpp  led_driver.cpp  led_driver.hpp  main.cpp  nmea_parser.hpp  state_machine.cpp  state_machine.hpp
firmware/main/lora/: sx1262.cpp  sx1262.hpp
firmware/test_apps/driver_test/: CMakeLists.txt  pytest_driver_test.py
firmware/test_apps/driver_test/main/: CMakeLists.txt  test_app_main.cpp  test_driver.cpp
firmware/test_apps/host_test/: CMakeLists.txt  sdkconfig
firmware/test_apps/host_test/main/: CMakeLists.txt  test_gpio.c
firmware/tests/: CMakeLists.txt  test_ble.cpp  test_button_handler.cpp  test_geofence.cpp  test_gps_geofence.cpp  test_led_driver.cpp  test_lora_driver.cpp  test_nmea_parser.cpp
firmware/tests/include/: esp_err.h  esp_log.h  esp_rom_gpio.h  esp_timer.h
firmware/tests/include/driver/: gpio.h  gpio_isr.h  spi_master.h
firmware/tests/include/freertos/: FreeRTOS.h  event_groups.h  timers.h
firmware/tests/src/: esp_timer_mock.cpp  event_groups_mock.cpp  gpio_mock.cpp  spi_mock.cpp
hardware/base_station/base_station/: README.md
hardware/enclosure/: Wio-SX1262_for_XIAO_3D_file.step
hardware/tracker/: PIN_MAPPING.md
hardware/tracker/tracker/: DIAGRAMS.md  README.md  tracker.kicad_sch
kicad/base_station/: README.md  base_station.kicad_pcb  base_station.kicad_prl  base_station.kicad_pro  base_station.kicad_sch
kicad/tracker/: tracker.kicad_pcb  tracker.kicad_prl  tracker.kicad_pro  tracker.net
resources/: lorapaws32-logo.xcf
src/: lib.rs  main.rs
tests/: lib_test.rs
