[package]
edition = "2021"
name = "esp32-tracker"
rust-version = "1.82"
version = "0.1.0"

[dependencies]
esp-hal = { version = "1.0", features = ["esp32s3"] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
critical-section = "1.2.0"
log = "0.4"

[build-dependencies]

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
