[project]
name = "lorapaws32-base-station"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "C4", "DTZ", "T10", "ISC"]
ignore = ["S307"]  # S307: password in paho-mqtt username_pw_set is false positive
